--- a/static/css/print.css
+++ b/static/css/print.css
@@ -14,5 +14,13 @@
     .cart{
         overflow: hidden;
     }
+
+    .print_hide{
+        display: none;
+    }
+
+    .printable{
+        display: flex;
+    }
     
 }
